# castor

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: macos-signed-build.yml  multi-platform-build.yml  windows-x86-build.yml
config/: AuthKey_M4PXT78BFC.p8  cert.b64  cert.pem  develop_cert.p12  develop_cert_modern.p12  key.pem
docs/: coding-standards.md  developer-module-quick-reference.md  feature-delivery-workflow.md  large-file-optimization-plan.md  latest-feature-updates-2026-03-13.md  ssl-certificate-management-principles.md  v1.0.0-implementation-summary.md  v1.2.0-implementation-summary.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  deploy.rs  localfs.rs  main.rs  nginx.rs  profiles.rs  proxy.rs  runtime.rs  runtime_deploy.rs  sftp.rs  ssl.rs
src-tauri/src/ssh/: mod.rs
src/app/: helpers.ts  types.ts
src/app/api/: localfs.ts  profiles.ts  proxy.ts  runtime.ts  sessions.ts  sftp.ts  ssl.ts  tauri.ts
src/app/hooks/: useContextMenuDismiss.ts  useLocalFilePane.ts  useNginxServices.tsx  useProfilesManager.ts  useSftpPane.ts  (+7 more)
src/components/: LocalActionDialog.tsx  LocalContextMenu.tsx  LocalUploadConflictDialog.tsx  NginxServicePanel.tsx  QuickConnectModal.tsx  ServerEditorModal.tsx  ServersView.tsx  SftpActionDialog.tsx  SftpContextMenu.tsx  SftpView.tsx  SystemdDeployPanel.tsx  TerminalView.tsx  TransferTasksPanelModal.tsx  WorkspaceView.tsx
src/styles/: app.css
(+48 files in other folders)
