[package]
name = "castor-ssh-desktop"
version = "0.1.0"
description = "Castor desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
