[package]
name = "castor"
version = "1.2.0"
description = "Castor desktop app"
authors = ["tpshion"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
rfd = "0.15"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
